<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_search">

    <fragment
        android:id="@+id/navigation_search"
        android:name="ru.test.features.ui.home.HomeFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_favourites"
        android:name="ru.test.features.ui.favourite.FavouritesFragment"
        android:label="@string/title_favorites"
        tools:layout="@layout/fragment_favourites" />

    <fragment
        android:id="@+id/navigation_responses"
        android:name="ru.test.features.ui.responses.ResponsesFragment"
        android:label="@string/title_responses"
        tools:layout="@layout/fragment_responses" />

    <fragment
        android:id="@+id/navigation_messages"
        android:name="ru.test.features.ui.messages.MessagesFragment"
        android:label="@string/title_messages"
        tools:layout="@layout/fragment_messages" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="ru.test.features.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

</navigation>